@@ -1,3 +1,8 @@
+2008-05-09  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20080429-1
+	* Upstream update
+
 2008-03-31  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20080330-1
